--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:3rlXGj662FFVOjFTwn5Te7oZoDsYyp7Kfc6mhWIb5hA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,8 +23,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=wedding-in
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=ourhostm_Kel6
+DB_PASSWORD=KELOMPOKSEUX
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
