--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:3rlXGj662FFVOjFTwn5Te7oZoDsYyp7Kfc6mhWIb5hA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=https://localhost
+APP_URL=https://weddingin.ourhost.my.id
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
