--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=wedding-in
+DB_DATABASE=weddingin
 DB_USERNAME=ourhostm_Kel6
 DB_PASSWORD=KELOMPOKSEUX
 
