--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=89.213.211.210
 DB_PORT=3306
-DB_DATABASE=wedding-in
+DB_DATABASE=ourhostm_wedding-in
 DB_USERNAME=ourhostm_Kel6
 DB_PASSWORD=KELOMPOKSEUX
 
