--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ DB_DATABASE=ourhostm_wedding-in
 DB_USERNAME=ourhostm_Kel6
 # DB_USERNAME=root
 DB_PASSWORD=KELOMPOKSEUX
-DB_PASSWORD=
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
