--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_ENV=local
 APP_KEY=base64:3rlXGj662FFVOjFTwn5Te7oZoDsYyp7Kfc6mhWIb5hA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-# APP_URL=https://weddingin.ourhost.my.id
-APP_URL=http://localhost
+APP_URL=https://weddingin.ourhost.my.id
+# APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,15 +21,15 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=89.213.211.210
-DB_HOST=127.0.0.1
+DB_HOST=89.213.211.210
+# DB_HOST=127.0.0.1
 DB_PORT=3306
-# DB_DATABASE=ourhostm_wedding-in
-DB_DATABASE=wedding-in
-# DB_USERNAME=ourhostm_Kel6
-DB_USERNAME=root
-# DB_PASSWORD=KELOMPOKSEUX
-DB_PASSWORD=
+DB_DATABASE=ourhostm_wedding-in
+# DB_DATABASE=wedding-in
+DB_USERNAME=ourhostm_Kel6
+# DB_USERNAME=root
+DB_PASSWORD=KELOMPOKSEUX
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
